fix for amplify

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@solana/web3.js": "^1.98.4",
     "@tanstack/react-query": "^5.90.10",
     "bs58": "^6.0.0",
+    "buffer": "^6.0.3",
     "firebase": "^12.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
