--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -7,6 +7,10 @@
     "outDir": "lib",
     "rootDir": "src",
     "esModuleInterop": true,
+    "baseUrl": ".",
+    "paths": {
+      "@solana/spl-account-compression": ["./node_modules/@solana/spl-account-compression/dist/types/src/index.d.ts"]
+    },
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "sourceMap": true,
