update env example

--- a/functions/.env.example
+++ b/functions/.env.example
@@ -1,4 +1,3 @@
-# Copy to .env.local for emulators or .env.deploy for firebase functions:env:set
 HELIUS_API_KEY=your-helius-api-key
 SOLANA_CLUSTER=devnet
 SOLANA_RPC_URL=https://api.devnet.solana.com
@@ -11,5 +10,5 @@ COLLECTION_METADATA=replace-with-collection-metadata-pda
 COLLECTION_MASTER_EDITION=replace-with-collection-master-edition-pda
 COLLECTION_UPDATE_AUTHORITY=replace-with-collection-update-authority
 DELIVERY_VAULT=replace-with-delivery-vault-public-key
-METADATA_BASE=https://<metadata-host>/metadata
+METADATA_BASE=https://assets.mons.link/shop/drops/1
 TOTAL_SUPPLY=333
