stub env deploy

--- a/functions/.env.example
+++ b/functions/.env.example
@@ -1,3 +1,4 @@
+# Copy to .env.local for emulators or .env.deploy for firebase functions:env:set
 HELIUS_API_KEY=your-helius-api-key
 SOLANA_CLUSTER=devnet
 SOLANA_RPC_URL=https://api.devnet.solana.com
