--- a/functions/.env.example
+++ b/functions/.env.example
@@ -1,14 +1,12 @@
-# Copy to .env.local for emulators or .env.deploy for firebase functions:env:set
-HELIUS_API_KEY=your-helius-api-key
+HELIUS_API_KEY=
 SOLANA_CLUSTER=devnet
-MERKLE_TREE=replace-with-merkle-tree-public-key
-TREE_AUTHORITY_SECRET=replace-with-tree-authority-secret-bs58
-# Set only if using a separate cosigner; otherwise leave blank to default to tree authority
-COSIGNER_SECRET=
-COLLECTION_MINT=replace-with-collection-mint
-COLLECTION_METADATA=replace-with-collection-metadata-pda
-COLLECTION_MASTER_EDITION=replace-with-collection-master-edition-pda
-COLLECTION_UPDATE_AUTHORITY=replace-with-collection-update-authority
-DELIVERY_VAULT=replace-with-delivery-vault-public-key
+MERKLE_TREE=
+TREE_AUTHORITY_SECRET=
+COLLECTION_MINT=
+COLLECTION_METADATA=
+COLLECTION_MASTER_EDITION=
+COLLECTION_UPDATE_AUTHORITY=
+COLLECTION_UPDATE_AUTHORITY_SECRET=
+DELIVERY_VAULT=
 METADATA_BASE=https://assets.mons.link/shop/drops/1
 TOTAL_SUPPLY=333
