require auth for cloud functions calls

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-VITE_SOLANA_CLUSTER=devnet
-VITE_RPC_URL=https://api.devnet.solana.com
-VITE_FIREBASE_API_KEY=AIzaSyA3NTv_zfVYMB2VNORxbKg3rJUsiMXIhko
-VITE_FIREBASE_AUTH_DOMAIN=mons-shop.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=mons-shop
-VITE_FIREBASE_STORAGE_BUCKET=mons-shop.firebasestorage.app
-VITE_FIREBASE_MESSAGING_SENDER_ID=804781326988
-VITE_FIREBASE_APP_ID=1:804781326988:web:abeb4da8cfe43318a671a9
-VITE_ADDRESS_ENCRYPTION_PUBLIC_KEY=CyDK6ifnmyk1osi5P6jh6882J3MmPudnmvS4WJiWEvgB
-VITE_SECONDARY_TENSOR=https://www.tensor.trade/
-VITE_SECONDARY_MAGICEDEN=https://magiceden.io/
+VITE_SOLANA_CLUSTER=
+VITE_RPC_URL=
+VITE_FIREBASE_API_KEY=
+VITE_FIREBASE_AUTH_DOMAIN=
+VITE_FIREBASE_PROJECT_ID=
+VITE_FIREBASE_STORAGE_BUCKET=
+VITE_FIREBASE_MESSAGING_SENDER_ID=
+VITE_FIREBASE_APP_ID=
+VITE_ADDRESS_ENCRYPTION_PUBLIC_KEY=
+VITE_SECONDARY_TENSOR=
+VITE_SECONDARY_MAGICEDEN=
