request inventory directly from the client

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ VITE_FIREBASE_APP_ID=
 VITE_ADDRESS_ENCRYPTION_PUBLIC_KEY=
 VITE_SECONDARY_TENSOR=
 VITE_SECONDARY_MAGICEDEN=
+
+VITE_HELIUS_API_KEY=
+VITE_COLLECTION_MINT=
+VITE_MERKLE_TREE=
+VITE_METADATA_BASE=
