add functions deployment script

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
     "deploy": "node --experimental-strip-types scripts/deploy-amplify.ts",
+    "df": "cd functions && firebase deploy --only functions",
     "box-minter:deploy-all": "node --experimental-strip-types scripts/deploy-all-box-minter.ts",
     "keygen": "node scripts/keygen.js"
   },
