fix firebase deployment

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "lib": ["ES2021"],
-    "module": "ES2020",
+    "module": "NodeNext",
     "target": "ES2021",
-    "moduleResolution": "Node",
+    "moduleResolution": "NodeNext",
     "outDir": "lib",
     "rootDir": "src",
     "esModuleInterop": true,
