--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "deploy:firebase": "firebase deploy --only firestore:rules,functions",
     "deploy:functions": "firebase deploy --only functions",
     "df": "cd functions && firebase deploy --only functions",
-    "box-minter:deploy-all": "node --experimental-strip-types scripts/deploy-all-box-minter.ts",
-    "keygen": "node scripts/keygen.js"
+    "deploy-all-onchain": "node --experimental-strip-types scripts/deploy-all-onchain.ts",
   },
   "repository": {
     "type": "git",
