--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "deploy:firebase": "firebase deploy --only firestore:rules,functions",
     "deploy:functions": "firebase deploy --only functions",
     "df": "cd functions && firebase deploy --only functions",
-    "deploy-all-onchain": "node --experimental-strip-types scripts/deploy-all-onchain.ts"
+    "deploy-all-onchain": "node --experimental-strip-types scripts/deploy-all-onchain.ts",
+    "start-mint": "node --experimental-strip-types scripts/startMint.ts"
   },
   "repository": {
     "type": "git",
