add fulfilment dashboard

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview",
     "typecheck": "node -e \"require('fs').mkdirSync('.cache',{recursive:true})\" && tsc --noEmit",
     "deploy": "node --experimental-strip-types scripts/deploy-amplify.ts",
-    "deploy:firebase": "firebase deploy --only firestore:rules,functions",
+    "deploy:firebase": "firebase deploy --only firestore:rules,firestore:indexes,functions",
     "deploy:functions": "firebase deploy --only functions",
-    "df": "cd functions && firebase deploy --only functions",
+    "df": "firebase deploy --only firestore:rules,firestore:indexes,functions",
     "deploy-all-onchain": "node --experimental-strip-types scripts/deploy-all-onchain.ts",
     "start-mint": "node --experimental-strip-types scripts/startMint.ts"
   },
