--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "firebase": "^12.6.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-icons": "^5.5.0",
     "tweetnacl": "^1.0.3",
     "zod": "^3.25.76"
   },
