--- a/onchain/programs/box_minter/Cargo.toml
+++ b/onchain/programs/box_minter/Cargo.toml
@@ -21,10 +21,10 @@ solana = []
 
 [dependencies]
 anchor-lang = { version = "0.32.1" }
+solana-sha256-hasher = "2.3.0"
 
 [lints.rust.unexpected_cfgs]
 level = "warn"
 priority = 0
 check-cfg = ['cfg(target_os, values("solana"))']
-
 
